<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.sorrowblue.comicviewer.bookshelf.management.smb.AuthConverter" />
        <import type="com.sorrowblue.comicviewer.bookshelf.management.smb.PortConverter" />

        <variable
            name="viewModel"
            type="com.sorrowblue.comicviewer.bookshelf.management.smb.BookshelfManagementSmbViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="@{viewModel.transitionName}">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:title="@string/bookshelf_management_title_smb" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="88dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/host"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/bookshelf_management_hint_host"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:textValidators="@{viewModel.hostValidations}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/host_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textUri"
                        android:text="@={viewModel.hostFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bookshelf_management_hint_port"
                    app:helperText="1~65535"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/host"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:textValidators="@{viewModel.portValidations}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/port_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="@={PortConverter.portToString(viewModel.portFlow)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/path"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bookshelf_management_hint_path"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/port"
                    app:prefixText="/"
                    app:suffixText="/">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/path_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textUri"
                        android:text="@={viewModel.pathFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/display_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bookshelf_management_hint_display_name"
                    app:helperText="空白の場合ホスト名"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/path">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text="@={viewModel.displayNameFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:checkedButton="@={AuthConverter.booleanToButtonId(viewModel.isGuestFlow)}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/display_name"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    tools:checkedButton="@id/username_password">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/guest"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bookshelf_management_label_guest"
                        app:icon="@drawable/ic_twotone_person_24" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/username_password"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bookshelf_management_label_username_password"
                        app:icon="@drawable/ic_twotone_password_24" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/domain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bookshelf_management_hint_domain"
                    app:isVisible="@{!viewModel.isGuestFlow}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:textValidators="@{viewModel.domainValidator}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/domain_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:text="@={viewModel.domainFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/bookshelf_management_hint_username"
                    app:isVisible="@{!viewModel.isGuestFlow}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/domain"
                    app:textValidators="@{viewModel.usernameValidator}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.usernameFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/bookshelf_management_hint_password"
                    app:endIconMode="password_toggle"
                    app:isVisible="@{!viewModel.isGuestFlow}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_begin"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:textValidators="@{viewModel.passwordValidator}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.passwordFlow}" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/blocker"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?attr/scrimBackground"
                    android:clickable="true"
                    app:isVisible="@{viewModel.isConnecting}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/progress"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:isVisible="@{viewModel.isConnecting}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
